# bicardinal

./: .gitignore  DOCUMENTATION.md  Makefile  README.md  pyproject.toml
bicardinal/: __init__.py  collection.py  hello.py
bicardinal/extractors/: __init__.py  audio.py  base.py  docx.py  image.py  pdf.py  router.py  text.py
bicardinal/office/: config.py  exceptions.py  pipeline.py  types.py
bicardinal/services/: chunking.py  embedder.py  summarizer.py
bicardinal/store/: __init__.py  catalog.py  index.py  payload.py
examples/: quickstart.py
tests/: test_e2e.py
