[project]
name = "bicardinal"
version = "0.0.1"
description = "Hello World"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "bicardinal", email = "support@bicardinal.com" }
]
keywords = ["bicardinal", "document", "AI", "vector", "database", "cloud"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/bicardinal/bicardinal-python"
Issues = "https://github.com/bicardinal/bicardinal-python/issues"
