[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bicardinal"
version = "0.0.2"
description = "Multimodal retrieval engine"
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "bicardinal", email = "support@bicardinal.com" }
]
keywords = ["bicardinal", "document", "AI", "vector", "database", "cloud"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "brinicle==0.1.0",
    "sentence-transformers>=3.0",
    "openai>=1.40",
    "mistralai>=1.0",
    "python-docx>=1.1",
    "pypdf>=4.0",
    "python-magic>=0.4.27",
    "numpy>=1.26",
    "voyageai>=0.3"
]

[project.optional-dependencies]
audio = ["pydub>=0.25"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[tool.hatch.build.targets.wheel]
packages = ["bicardinal"]



[project.urls]
Homepage = "https://github.com/bicardinal/bicardinal"
Issues = "https://github.com/bicardinal/bicardinal/issues"